--- a/src/main/resources/templates/details-building.html
+++ b/src/main/resources/templates/details-building.html
@@ -9,10 +9,32 @@
     <h1 th:text="${pageTitle}"></h1>
     <hr/>
     <p th:text="${building.toString}"></p>
-    <a th:href="@{/buildings/{buildingId}/apartments/(buildingId=${building.getId()})}">
-        <span th:if="${hasApartments}">Manage Apartments</span>
-        <span th:unless="${hasApartments}">Add Apartments</span>
-    </a>
+
+    <th:block th:if="${building.getArchivedOn() == null}">
+        <p>Status: Managed (active)</p>
+        <a th:href="@{/buildings/{buildingId}/apartments/(buildingId=${building.getId()})}">
+            <span th:if="${hasApartments}">Manage Apartments</span>
+            <span th:unless="${hasApartments}">Add Apartments</span>
+        </a>
+        <form th:action="@{/buildings/{buildingId}/archive(buildingId=${building.getId()})}" th:method="post">
+            <p>Don't manage anymore?</p>
+            <button type="submit">archive</button>
+        </form>
+    </th:block>
+
+    <th:block th:if="${building.getArchivedOn() != null}">
+        <p>Status: Not managed (archived)</p>
+        <form th:action="@{/buildings/{buildingId}/activate(buildingId=${building.getId()})}"
+              th:method="post">
+            <p>Manage again? </p>
+            <button type="submit">activate</button>
+        </form>
+    </th:block>
+    <form th:action="@{/buildings/{buildingId}/delete(buildingId=${building.getId()})}" th:method="post">
+        <p>Delete permanently?</p>
+        <button type="submit">delete</button>
+    </form>
+
     <hr/>
 
 </main>
