--- a/src/main/resources/templates/details-building.html
+++ b/src/main/resources/templates/details-building.html
@@ -8,35 +8,54 @@
 <main>
     <h1 th:text="${pageTitle}"></h1>
     <hr/>
-    <p th:text="${building.toString}"></p>
-
-    <th:block th:if="${building.getArchivedOn() == null}">
-        <p>Status: Managed (active)</p>
-        <a th:href="@{/buildings/{buildingId}/apartments/(buildingId=${building.getId()})}">
-            <span th:if="${hasApartments}">Manage Apartments</span>
-            <span th:unless="${hasApartments}">Add Apartments</span>
-        </a>
-        <form th:action="@{/buildings/{buildingId}/archive(buildingId=${building.getId()})}" th:method="post">
-            <p>Don't manage anymore?</p>
-            <button type="submit">archive</button>
-        </form>
-    </th:block>
-
-    <th:block th:if="${building.getArchivedOn() != null}">
-        <p>Status: Not managed (archived)</p>
-        <form th:action="@{/buildings/{buildingId}/activate(buildingId=${building.getId()})}"
+    <th:block th:object="${building}">
+        <p th:text="|*{name} (address: *{address}) |"></p>
+        <h2>Edit Building Details: </h2>
+        <form th:action="@{/buildings/{buildingId}/edit(buildingId=*{id})}"
               th:method="post">
-            <p>Manage again? </p>
-            <button type="submit">activate</button>
+            <label for="name">Edit name:
+                <input name="name" type="text" id="name" th:value="*{name}"/>
+            </label>
+
+            <label for="address">Edit address:
+                <input name="address" type="text" id="address" th:value="*{address}"/>
+            </label>
+            <button type="submit">Edit</button>
+
+            <p th:if="${editedBuilding}" th:text="|Successfully edited building details|"></p>
+            <p th:if="${foundBuilding}" th:text="|Building with this name/address already exists|"></p>
+
+<!--            <p th:if="${error}" th:text="${error}"></p>-->
+        </form>
+
+
+        <th:block th:if="*{archivedOn == null}">
+            <p>Status: Managed (active)</p>
+            <a th:href="@{/buildings/{buildingId}/apartments/(buildingId=*{id})}">
+                <span th:if="${hasApartments}">Manage Apartments</span>
+                <span th:unless="${hasApartments}">Add Apartments</span>
+            </a>
+            <form th:action="@{/buildings/{buildingId}/archive(buildingId=*{id})}" th:method="post">
+                <p>Don't manage anymore?</p>
+                <button type="submit">archive</button>
+            </form>
+        </th:block>
+
+        <th:block th:if="*{archivedOn != null}">
+            <p>Status: Not managed (archived)</p>
+            <form th:action="@{/buildings/{buildingId}/activate(buildingId=*{id})}"
+                  th:method="post">
+                <p>Manage again? </p>
+                <button type="submit">activate</button>
+            </form>
+        </th:block>
+        <form th:action="@{/buildings/{buildingId}/delete(buildingId=*{id})}" th:method="post">
+            <p>Delete permanently?</p>
+            <button type="submit">delete</button>
         </form>
     </th:block>
-    <form th:action="@{/buildings/{buildingId}/delete(buildingId=${building.getId()})}" th:method="post">
-        <p>Delete permanently?</p>
-        <button type="submit">delete</button>
-    </form>
-
     <hr/>
-
+    <a href="/buildings/">All Buildings</a>
 </main>
 
 <footer>
